fixed overflow bug in main-left

--- a/src/index.styl
+++ b/src/index.styl
@@ -109,13 +109,13 @@ body
   width: 270px
   padding:15px 15px 15px 15px
   display:block
-  overflow:hidden
-  overflow-y:scroll
+  overflow:visible
+  // overflow-y:auto
   position:absolute
   height:calc(100vh - 90px) 
   background-color: #353843
-  transition:0.5s ease-in-out
-  -webkit-transition:0.5s ease-in-out
+  transition:0.2s ease-in-out
+  -webkit-transition:0.2s ease-in-out
   
   &.show
     left:0px
